feat: Implement role-based access control with permissions and roles decorators
- Added Permissions and Roles decorators for securing routes.
- Created LoggingMiddleware for request logging.
- Implemented ResponseInterceptor to standardize API responses.
- Defined AppConfigType, AdmDatabaseConfigType, and JwtConfigType interfaces for configuration.
- Developed CacheCleanupService for cache management on module initialization.
- Created EnvConfigService to manage environment configurations.
- Integrated LoggerService with Winston for structured logging.
- Implemented ShutdownService for graceful application shutdown.
- Configured Swagger documentation setup for API.
- Introduced ServiceResponse class for consistent API response structure.
- Established configuration files for application, database, and JWT.
- Created modules for handling permissions and roles with respective entities and services.
- Developed migration scripts for initializing database schema.
- Enhanced main application bootstrap with global pipes and interceptors.
- Added DTOs for authentication processes including login and password change.
- Implemented guards for JWT authentication, role-based access, and two-factor authentication.
- Seeded initial roles and permissions into the database.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,12 +10,19 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "paths": {
+      "src/*": ["src/*"]
+    },
     "incremental": true,
     "skipLibCheck": true,
-    "strictNullChecks": true,
+    "strict": true, // Enforce strict typing
+    "noImplicitAny": true, // Catch untyped variables
+    "strictNullChecks": true, // Ensure null safety
+    "strictBindCallApply": true, // Catch incorrect call/apply usages
     "forceConsistentCasingInFileNames": true,
-    "noImplicitAny": false,
-    "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false
-  }
+    "noFallthroughCasesInSwitch": true, // Avoid unintended switch fallthrough
+    "strictPropertyInitialization": false
+  },
+  "include": ["src/**/*.ts"], // Specify source files
+  "exclude": ["node_modules", "dist", "**/*.spec.ts"] // Exclude unnecessary files
 }
